--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
     }
 }
 
+    repositories{
+        mavenCentral();
+        maven { url "https://jitpack.io" }
+    }
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -27,5 +32,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'org.litepal.android:core:1.3.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.specyci:residemenu:1.6+'
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
     testCompile 'junit:junit:4.12'
 }
